<resources>
    <string name="app_name">FinalProject</string>

    <!-- the strings in the main page -->
    <string name="main_dic">Merriam Webster Dictionary</string>
    <string name="main_news">News Feed</string>
    <string name="main_flight">Flight Status tracker</string>
    <string name="main_article">New York Times Article Search</string>

    <!-- the strings for the menu -->
    <string name="menu_dic">Dictionary</string>
    <string name="menu_news">News</string>
    <string name="menu_flight">Flights</string>
    <string name="menu_article">Articles</string>
    <string name="menu_about">About</string>
    <string name="menu_help">Help</string>
    <string name="menu_search">Search</string>

    <!-- the strings for the article page -->
    <string name="article_test">Articles</string>
    <string name="article_search_hint">Input a topic here to search</string>
    <string name="article_search_button">search</string>
    <string name="article_save">save this article</string>
    <string name="article_toast">Article saved!</string>
    <string name="article_author">Author: </string>
    <string name="article_version">Version: </string>
    <string name="article_instruction">Instruction: </string>
    <string name="article_delete">delete</string>
    <string name="article_delete_remind">Delete this article?</string>

    <!-- the strings for the flight page -->
    <string name="flight_textBox">Enter code here</string>
    <string name="flight_textButton">Check</string>
    <string name="frag_saveButton">Save</string>
    <string name="frag_delButton">Delete</string>
    <string name="frag_backButton">Back</string>
    <string name="frag_saveFlight">Saved Flights</string>
    <string name="activity_departureRadio">Departure</string>
    <string name="activity_arrivalRadio">Arrival</string>

    <!-- the strings for the general use -->
    <string name="confirm">Yes</string>
    <string name="ok">OK</string>
  <string name="save">save</string>
    <string name="delete">delet</string>

    <string name="menu_saved">Saved list</string>
</resources>
