<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/dic_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_dic" />

    <Button
        android:id="@+id/news_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_news" />

    <Button
        android:id="@+id/flight_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_flight" />

    <Button
        android:id="@+id/article_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_article" />
</LinearLayout>